# Fenix3D

./: CMakeLists.txt  README.md  axis.cpp  axis.h  background.cpp  background.h  camera3d.cpp  camera3d.h  data.h  fbackground.glsl  fcolored_lines.glsl  fshader.glsl  geometryengine.cpp  geometryengine.h  glwidget.cpp  glwidget.h  loader.cpp  loader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh_wireframe.glsl  object3d.cpp  object3d.h  shaders.qrc  transformational.h  vbackground.glsl  vcolored_lines.glsl  vshader.glsl  window.cpp  window.h
assimp/lib/Debug/: assimp-vc142-mtd.lib
models/: Mandalorian_Head.stl
